fix: footer dashboard on mobile

--- a/sass/Footer.module.sass
+++ b/sass/Footer.module.sass
@@ -1,3 +1,7 @@
+footer.hide
+    @media screen and (max-width: 950px)
+        display: none
+
 footer.box
     width: 100%
     & div.padding
@@ -56,3 +60,7 @@ footer.box
                         cursor: pointer
                         &:hover
                             opacity: 1
+
+div.emptyMr
+    @media screen and (max-width: 950px)
+        margin-top: 95px
