--- a/sass/account/page.module.sass
+++ b/sass/account/page.module.sass
@@ -141,7 +141,6 @@ ul.connections
     width: 100%
     gap: 1.5rem
     height: 100%
-    margin-bottom: 50px
     & li.card
         text-decoration: none
         color: var(--font-st)
