--- a/sass/account/security/page.module.sass
+++ b/sass/account/security/page.module.sass
@@ -107,7 +107,7 @@ div.hds
                     margin-left: 10px
                     width: 100%
 div.deactivate
-    margin: 80px 0
+    margin: 80px 0 0 0
     & h2
         margin: 0
         font-size: 24px
